pedroeldiablo/w01d04/javascript-calculator/css/style.css
body {
  background: green;
}

#form {
  /*box-sizing: border-box;*/
  font-family: cursive;
  margin: auto;
  margin-top: 50px;
  font-size: 24px;
  height: 300px;
  width:300px;
  background-color: blue;
  padding: 30px;
  border-radius: 10px;
  font-size: 16px;
  font-family: cursive;
}

.field {
  height: 30px;
  width: 70%;
  margin-left: 10%;
  border-color: pink;
  border-width: 4px;
  display: inline-block;
  font-size: 16px;
  font-family: cursive;
  /*position:absolute;*/
}

#operator{
  background-color: orange;
  border-color: purple;
  border-radius: 0px;
  border-width: 4px;
  margin-left: 10%;
  display: inline-block;
  width: 70%;
  font-family: Helvetica;
  font-size: 24px;
}

#submitButton{
  margin-left: 10%;
  width: 70%
  font-family: Helvetica;
  font-size: 24px;
}

#answer{
  border-color: red;
}

#clearButton {
  background-color: green;
  display: inline-block;
  margin-left: 10%;
  width: 70%;
  font-family: Helvetica;
  font-size: 24px;
}

